--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,25 @@ section{
   left: 100%;
 }
 
+.links-container{
+  background-color: var(--container-color);
+  position: absolute;
+  width: 100%;
+  top: 80px;
+  left: 0%;
+  height: calc(100vh - 80px);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  transition: left .4s linear;
+}
+
+.links-container.undeployed{
+  left: -100%;
+}
+
 .cart{
   background-color: var(--container-color);
   width: 100%;
@@ -182,6 +201,35 @@ section{
   position: absolute;
   bottom: -8px;
   right: -8px;
+}
+
+.cart-info{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  position: absolute;
+  left: 0;
+  bottom: 50%;
+  top: 50%;
+  padding: 0 .5rem;
+}
+
+.cart-title, .cart-subtitle{
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: var(--title-color);
+}
+
+.cart-message{
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--text-color);
+  padding-top: .25rem;
+}
+
+.emptyCart-img{
+  width: 90%;
 }
 
 .introduction{
@@ -549,6 +597,19 @@ ul{
     margin-right: 1rem;
   }
 
+  .bx-grid-alt{
+    display: none;
+  }
+
+  .links-container{
+    background-color: transparent;
+    position: initial;
+    display: flex;
+    flex-direction: row;
+    height: 0;
+    padding: 0;
+}
+
   .introduction-container{
     grid-template-columns: 1fr;
     row-gap: 2.5rem;
@@ -600,6 +661,10 @@ ul{
   .container{
     margin-left: 1rem;
     margin-right: 1rem;
+  }
+
+  .bx-grid-alt{
+    display: none;
   }
 
   .introduction-container{
@@ -658,6 +723,10 @@ ul{
   .container{
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .bx-grid-alt{
+    display: none;
   }
 
   .introduction-container{
